tests/ui/generic-const-items/def-site-eval.fail.stderr
error[E0080]: evaluation of `_::<'_>` failed
  --> $DIR/def-site-eval.rs:14:20
   |
LL | const _<'_a>: () = panic!();
   |                    ^^^^^^^^ evaluation panicked: explicit panic
   |
   = note: this error originates in the macro `$crate::panic::panic_2015` which comes from the expansion of the macro `panic` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0080`.
